# common-expression-language

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  benchmark_comparison.yaml  ci.yaml  python.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: basic-json-object.json
interpreter/: Cargo.toml
interpreter/src/: lib.rs  main.rs  strings.rs  types.rs  utils.rs
parser/: Cargo.toml
parser/benches/: cel_parsing_benchmark.rs
parser/src/: ast.rs  lib.rs  parser.rs
python_bindings/: Cargo.toml  README.md  pyproject.toml
python_bindings/src/: lib.rs
python_bindings/tests/: test_rustycel.py
src/: ast.rs  lib.rs  main.rs  parser.rs  token.rs
