[package]
name = "cel-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
chumsky = "0.9.2"
clap = "4.3.11"
serde = {version = "1.0.171", features = ["derive"]}
