[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cel-parser = { path = "../parser" }
clap = { version = "4.3.11", features = ["derive"]}
serde = {version = "1.0.171", features = ["derive"]}
