[package]
name = "cel-parser"
version = "0.1.0"
edition = "2021"
authors = ["Brian Thorne <brian@hardbyte.nz>"]
description = "A parser for the CEL language"
license = "apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
chumsky = "0.9.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "cel_parsing_benchmark"
harness = false

[lib]
bench = false
